dvisvgm-1.0.2
- applied latest TeX Live portability patches sent by Peter Breitenlohner and Karl Berry
- fixed a potrace name clash occurred on Mac OS X Tiger
- fixed putchar() name clash occurred on Solaris
- fixed a couple of conversion warnings
- updated the test suite

dvisvgm-1.0.1
- fixed a memory issue in the PS handler that could lead to a segfault (SF bug #3013392)
- fixed a recursion issue in the PS handler
- suppress ANSI color code when terminating

dvisvgm-1.0
- conversion of multiple pages (must be enabled explicitly, see option --pages)
- added transparency support to the PS handler
- improved conversion results of the PS handler
- added support for computation of local bounding boxes
- optional colorization of dvisvgm messages (option --color)
- improved progress indicator (option --progress)
- a couple of improvements of the build system

dvisvgm-0.9.1
- CSS style definitions omit unnecessary fonts now
- SVG validity was broken when using font elements
- fixed two memory issues that could lead to segfaults

dvisvgm-0.9
- added option --exact and corresponding algorithms to compute the exact 
  bounding boxes of characters
- added option --keep that prevents deleting temporary font files
- extended option --trace-all by an optional boolean argument controlling
  the re-tracing of glyphs
- fixed bug in evaluation of embedded PS headers
- several code refactorings

dvisvgm-0.8.8
- added option --libgs and evaluation of environment variable LIBGS
  to overwrite the expected file name of the GS shared library
  (only available if dvisvgm isn't linked against libgs and GS support
  isn't completely disabled)
- option --bbox can now be used to enlarge the minimal bounding box by 
  a given amount
- fixed bug in evaluation of option --page
- applied patches sent by Peter Breitenlohner to prepare the integration of 
  dvisvgm into TeX Live
- some code refactorings

dvisvgm-0.8.7
- fixed a bounding box issue concerning italic corrections